# Fastapi-rest

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: create_fastapi_app.py  main.py
app/admin_panel/: __init__.py  auth_admin.py
app/admin_panel/views/: __init__.py  active_token_admin.py  portions_admin.py  products_admin.py  restaurant_admin.py  tiers_admin.py  token_blacklist_admin.py  users_admin.py
app/alembic/: env.py
app/api/: __init__.py
app/api/auth_v1/: __init__.py  auth_crud.py  auth_helpers.py  auth_jwt_router.py  auth_jwt_token.py  auth_token_helpers.py  auth_utils.py  token_crud.py  validation_auth.py  validation_auth_helper.py  validation_auth_helper_refresh.py
app/api/category_v1/: __init__.py  category_crud.py  category_router.py
app/api/portions_v1/: __init__.py  portions_crud.py  portions_router.py
app/api/products_v1/: __init__.py  products_crud.py  products_router.py
app/api/restaurant_v1/: __init__.py  restaurant_crud.py  restaurant_router.py
app/api/tier_v1/: tier_crud.py  tier_router.py
app/api/user_v1/: users_crud.py  users_router.py
app/auth/: __init__.py  refresh_token_check.py  utils_jwt.py
app/core/: config.py  redis.py
app/core/models/: __init__.py  active_token_model.py  base_model.py  category_model.py  db_helper.py  product_model.py  product_size_model.py  product_variation_model.py  restaurant_model.py  tier_model.py  token_blacklist_model.py  user_model.py
app/utils/: upload_image.py
fastapi-app/: create_fastapi_app.py  main.py
fastapi-app/alembic/: env.py
fastapi-app/core/: config.py
(+21 files in other folders)
