[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
pydantic = {extras = ["email"], version = "^2.8.2"}
pydantic-settings = "^2.4.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.33"}
asyncpg = "^0.29.0"
alembic = "^1.13.2"
orjson = "^3.10.7"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

